2009-11-25  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Plumb setNeedsSiteSpecificQuirks throught WebKit API.
        https://bugs.webkit.org/show_bug.cgi?id=31878

        * public/WebSettings.h: Added decl.
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setNeedsSiteSpecificQuirks): Added impl.
        * src/WebSettingsImpl.h:

2009-11-24  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Eric Seidel.

        Add ENABLE_SHARED_SCRIPT feature define and flag for build-webkit
        https://bugs.webkit.org/show_bug.cgi?id=31444

        * features.gypi:

2009-11-24  Evan Stade  <estade@chromium.org>

        Reviewed by David Levin.

        Linux Chromium sends too many click events
        https://bugs.webkit.org/show_bug.cgi?id=31841

        Manually count number of clicks for double/triple click events. This
        makes us match Firefox on http://www.quirksmode.org/js/events_mouse.html
        Chromium side of this patch is here:
        http://codereview.chromium.org/431031/show

        * src/gtk/WebInputEventFactory.cpp:
        (WebKit::WebInputEventFactory::mouseEvent):

2009-11-24  Darin Fisher  <darin@chromium.org>

        Reviewed by Adam Barth.

        [Chromium] Renderer hang when using www.expedia.com
        https://bugs.webkit.org/show_bug.cgi?id=31822

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchWillSendRequest):
        Assign ReturnCacheDataDontLoad cache policy at the last moment
        to match Safari.  This way the cache policy does not get stored
        in DocumentLoader's originalRequest preventing it from being
        inherited by subresource requests.
        * src/ResourceHandle.cpp:
        (WebCore::ResourceHandle::willLoadFromCache): Remove assignment
        of ReturnCacheDataDontLoad cache policy so that it doesn't end
        up applying to the DocumentLoader's originalRequest.
